--- a/First Homework/src/main/resources/application.properties
+++ b/First Homework/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.data.mongodb.database=cooking
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 
+homework.jwt.secret= homeworkSecretKey
